Footer; Fixed problem with whitespace at bottom of page (between 768px and 1500px across all HTML pages). Removed 'margin-bottom' for all unordered lists ('ul') to correct the issue.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,10 @@ h1, h2, h3, h4 {
     font-weight: 600;
 }
 
+ul {
+    margin-bottom: 0;
+}
+
 /* ----------------------------------The Header */
 
 .jumbotron {
